Fixed css problems that prevented the document content from being visible while and after editing if the content got too long for the editor area.
LL-203 #resolve

--- a/src/app/document/content/documentContent.less
+++ b/src/app/document/content/documentContent.less
@@ -126,6 +126,7 @@
   #editor {
     min-height: 200px;
     border: 1px solid grey;
+    overflow: auto;
   }
 
   a[data-original-title="Font"] {
@@ -153,6 +154,7 @@
   .editor {
     border-radius: 0;
     height: 300px;
+    overflow: auto;
   }
 
   .editor-wrapper {
